--- a/guide/Discussion.tex
+++ b/guide/Discussion.tex
@@ -1,11 +1,11 @@
-% englisch - Discussion
+% % englisch - Discussion
 
-\section{Diskussion}
+% \section{Diskussion}
 
-Im folgenden Abschnitt werden die Ergebnisse interpretiert und Möglichkeiten zur weiteren Forschung angeführt
+% Im folgenden Abschnitt werden die Ergebnisse interpretiert und Möglichkeiten zur weiteren Forschung angeführt
 
-\subsection{Interpretation}
-Die überraschenden Ergebnisse sind folgendermaßen zu interpretieren \ldots
+% \subsection{Interpretation}
+% Die überraschenden Ergebnisse sind folgendermaßen zu interpretieren \ldots
 
-\subsubsection{Ausblick}
-Es war nicht Teil der Arbeit xy zu untersuchen, aufgrund der bisherigen Ergebnisse scheint es jedoch lohnenswert, auch diesen Weg weiter zu verfolgen \ldots
+% \subsubsection{Ausblick}
+% Es war nicht Teil der Arbeit xy zu untersuchen, aufgrund der bisherigen Ergebnisse scheint es jedoch lohnenswert, auch diesen Weg weiter zu verfolgen \ldots
