--- a/guide/main.tex
+++ b/guide/main.tex
@@ -46,8 +46,8 @@
 \tableofcontents
 \newpage
 \listoffigures
-\newpage
-\listoftables
+% \newpage
+% \listoftables
 \newpage
 %\setglossarystyle{listhypergroup}
 \printglossaries
